# eegtopo

./: .gitignore  README.md  index.html  params.json
matlab/: .gitignore  eeg_circleplot.m  eeg_topoplot.m
project/: CMakeLists.txt  eegtopo-gui.pro  eegtopo.pro
src/: colormap.cpp  colormap.h  electrodegraphics.cpp  electrodegraphics.h  electrodes.cpp  electrodes.h  layout-1020.txt  layout-all.txt  main.cpp  membermap.cpp  membermap.h  painter.cpp  painter.h  parser.cpp  parser.h  test.txt  topo.txt  topo2.txt
src/gui/: elselwidget.cpp  elselwidget.h  guimain.cpp  guimain.h  mainwindow.cpp  mainwindow.h  previewwidget.cpp  previewwidget.h
